<resources>
    <string name="app_name">NSGapp</string>
    <string name="brain_part_1">brain part 1</string>
    <string name="brain_part_2">brain part 2</string>
    <string name="brain_part_3">brain part 3</string>
    <string name="brain_part_4">brain part 4</string>
    <string name="nsg_viewer">NSG Viewer</string>
    <string name="brain_stem">Brain Stem</string>
    <string name="cerebellum">Cerebellum</string>
    <string name="occipital_lobe">Occipital Lobe</string>
    <string name="parietal_lobe">Parietal Lobe</string>
    <string name="cerebral_cortex">Cerebral Cortex</string>
    <string name="temporal_lobe">Temporal Lobe</string>
    <string name="frontal_lobe">Frontal Lobe</string>
    <string name="title_activity_patient_list">patient_list</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="NSGapp">NSGapp</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="nsg_patient_anatomy_app">NSG Patient Anatomy App</string>
    <string name="confirm_patient">Confirm Patient</string>
    <string name="gatorbw">gatorbw</string>
    <string name="select_a_study_id_number">Select a Study ID Number</string>
    <string name="select_study_ID">Select a Study ID</string>
    <string name="select_a_study">Select a Study</string>
    <string name="select_a_patient">Select a Patient</string>
    <string name="patient_information"><![CDATA[<Patient Information>]]></string>
</resources>