<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_wrapMode="aligned">


    <android.opengl.GLSurfaceView
        android:id="@+id/GLsurface"
        android:layout_width="344dp"
        android:layout_height="286dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_Frontal_lobe_toggle"
        app:layout_constraintEnd_toEndOf="@+id/scanInfo"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/btn_Frontal_lobe_toggle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="91dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/frontal_lobe"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Parietal_Lobe_toggle"
        app:layout_constraintEnd_toEndOf="@+id/btn_Temporal_Lobe_toggle"
        app:layout_constraintStart_toStartOf="@+id/btn_Temporal_Lobe_toggle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Temporal_Lobe_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="45dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/temporal_lobe"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Cerebral_Cortex_toggle"
        app:layout_constraintEnd_toEndOf="@+id/btn_Cerebral_Cortex_toggle"
        app:layout_constraintStart_toStartOf="@+id/btn_Cerebral_Cortex_toggle"
        app:layout_constraintTop_toTopOf="@+id/btn_Frontal_lobe_toggle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Cerebral_Cortex_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="46dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/cerebral_cortex"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Parietal_Lobe_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Frontal_lobe_toggle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Parietal_Lobe_toggle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/parietal_lobe"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Occipital_Lobe_toggle"
        app:layout_constraintEnd_toEndOf="@+id/btn_Cerebral_Cortex_toggle"
        app:layout_constraintStart_toStartOf="@+id/btn_Cerebral_Cortex_toggle"
        app:layout_constraintTop_toTopOf="@+id/scanInfoNumber"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Occipital_Lobe_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="46dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/occipital_lobe"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Cerebellum_toggle"
        app:layout_constraintEnd_toEndOf="@+id/btn_Parietal_Lobe_toggle"
        app:layout_constraintStart_toStartOf="@+id/btn_Parietal_Lobe_toggle"
        app:layout_constraintTop_toTopOf="@+id/scanInfoNumber"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Cerebellum_toggle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/cerebellum"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/GLsurface"
        app:layout_constraintEnd_toEndOf="@+id/btn_Occipital_Lobe_toggle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Occipital_Lobe_toggle"
        app:layout_constraintTop_toBottomOf="@+id/GLsurface"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/btn_Brain_Stem_toggle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:checked="true"
        android:onClick="onToggle"
        android:text="@string/brain_stem"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/GLsurface"
        app:layout_constraintEnd_toEndOf="@+id/btn_Cerebellum_toggle"
        app:layout_constraintStart_toStartOf="@+id/btn_Cerebellum_toggle"
        app:layout_constraintTop_toBottomOf="@+id/btn_Cerebellum_toggle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nsg_viewer"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/GLsurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/scanInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="327dp"
        android:text="Scan information:"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scanInfoName"
        app:layout_constraintTop_toTopOf="@+id/GLsurface"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scanInfoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="39dp"
        android:text="Patient Name"
        app:layout_constraintBottom_toBottomOf="@+id/scanInfoDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scanInfoDate"
        app:layout_constraintTop_toTopOf="@+id/scanInfo" />

    <TextView
        android:id="@+id/scanInfoDate"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="Date"
        app:layout_constraintBottom_toBottomOf="@+id/scanInfoNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanInfo" />

    <TextView
        android:id="@+id/scanInfoNumber"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginBottom="207dp"
        android:text="Scan Number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scanInfoDate" />

    <Button
        android:id="@+id/viewerLoggoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>