<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FBF9F9"
    android:foregroundTint="#03EFE9E9"
    android:layerType="none"
    android:layoutMode="clipBounds"
    tools:actionBarNavMode="standard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EFECE2"
        android:backgroundTint="#FBFAFA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/userpasscontainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/titlecontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="#40445E"
        app:layout_constraintBottom_toTopOf="@+id/userpasscontainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="#40445E"
            android:fadingEdge="none"
            android:fontFamily="sans-serif-smallcaps"
            android:requiresFadingEdge="horizontal|vertical"
            android:text="@string/nsg_patient_anatomy_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F6FAFD"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/gatorbw"
            android:layout_width="233dp"
            android:layout_height="205dp"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/gatorbw"
            app:srcCompat="@drawable/gatorbw" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/brainlogo"
        android:layout_width="198dp"
        android:layout_height="177dp"
        android:backgroundTint="#02F8F5F5"
        android:contentDescription="@string/nsg_patient_anatomy_app"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brainicon"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@id/userpasscontainer"
        android:layout_width="396dp"
        android:layout_height="176dp"
        app:cardBackgroundColor="#520D2DDA"
        app:layout_constraintBottom_toTopOf="@+id/logincontainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlecontainer">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/username"
            android:inputType="textLongMessage|textNoSuggestions"
            android:selectAllOnFocus="true"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/userpasscontainer"
            app:layout_constraintTop_toBottomOf="@id/username" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/logincontainer"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        app:cardBackgroundColor="#005760A3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userpasscontainer"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="123dp"
            android:layout_height="63dp"
            android:layout_gravity="center|top"
            android:layout_marginStart="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="48dp"
            android:background="#4303A9F4"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="sans-serif-thin"
            android:onClick="OnClickListener"
            android:text="@string/action_sign_in"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Login" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>