<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container">

    </androidx.appcompat.widget.SearchView>
-->
    <!--
    <Spinner
        android:id="@+id/spinner"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contextClickable="true"
        android:foregroundGravity="top"
        android:isScrollContainer="true"
        android:longClickable="true"
        android:popupTheme="@style/AppTheme.AppBarOverlay"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_selction_title"
        tools:ignore="NotSibling"
        tools:listitem="@android:layout/list_content" />
-->

    <ListView
        android:id="@+id/patientList"
        android:layout_width="347dp"
        android:layout_height="519dp"
        android:layout_marginBottom="25dp"
        android:choiceMode="singleChoice"
        android:clickable="false"
        android:contextClickable="true"
        android:descendantFocusability="blocksDescendants"
        android:fitsSystemWindows="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:foregroundGravity="center|center_horizontal"
        android:headerDividersEnabled="false"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_selction_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@android:layout/list_content" />

    <TextView
        android:id="@+id/item_selction_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/select_a_patient"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="64dp"
        android:text="@string/confirm_patient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="200dp"

        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_button"
        tools:layout_editor_absoluteY="692dp" />

</androidx.constraintlayout.widget.ConstraintLayout>